--- a/src/views/_navbar.ejs
+++ b/src/views/_navbar.ejs
@@ -4,7 +4,7 @@ const replaceDynamicLinks = ({ isLoading, user } = {}) => {
 
   $('#navbar-dynamic-links').html(user ? `
     <li class="nav-item">
-      <p class="nav-link mb-0">Welcome ${user.username}</p>
+      <p id="navbar-username" class="nav-link mb-0">Welcome ${user.username}</p>
     </li>
     <li class="nav-item">
       <a id="auth-logout" class="nav-link text-danger" href="#">Logout</a>
