--- a/src/views/_navbar.ejs
+++ b/src/views/_navbar.ejs
@@ -49,7 +49,7 @@ $(document).ready(() => {
 })
 </script>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light align-middle">
+<nav id="navbar" class="navbar navbar-expand-lg align-middle">
   <div class="container-fluid">
     <!--
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasLeft" aria-controls="offcanvasLeft">
@@ -59,8 +59,8 @@ $(document).ready(() => {
 
     <a class="navbar-brand start-0" href="/">Pixel Canvas</a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-links">
-      <span class="navbar-toggler-icon"></span>
+    <button id="navbar-toggler" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-links">
+      <span id="navbar-toggler-icon" class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbar-links">
