--- a/src/views/_navbar.ejs
+++ b/src/views/_navbar.ejs
@@ -4,17 +4,30 @@ const replaceDynamicLinks = ({ isLoading, user } = {}) => {
 
   $('#navbar-dynamic-links').html(user ? `
     <li class="nav-item">
-      <p id="navbar-username" class="nav-link mb-0">Welcome ${user.username}</p>
+      <p id="navbar-username" class="nav-link mb-0">Welcome <b>${user.username}</b></p>
     </li>
     <li class="nav-item">
-      <a id="auth-logout" class="nav-link text-danger" href="#">Logout</a>
+      <a id="auth-logout" class="nav-link" href="/auth/login">Logout</a>
     </li>
+
+    <li class="nav-item">
+      <button id="offcanvas-toggle" type="button" class="btn btn-primary">
+        Activity log <span id="notif" class="badge badge-light"></span>
+      </button>
+    </li>
+
   ` : `
     <li class="nav-item">
-      <a class="nav-link" href="/auth/signup">Signup</a>
+      <a id="signup" class="nav-link" href="/auth/signup">Signup</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/auth/login">Login</a>
+      <a id="login" class="nav-link" href="/auth/login">Login</a>
+    </li>
+
+    <li class="nav-item">
+      <button id="offcanvas-toggle" type="button" class="btn btn-primary">
+        Activity log <span id="notif" class="badge badge-light"></span>
+      </button>
     </li>
   `)
 }
@@ -43,13 +56,21 @@ const handleLogout = (e) => {
   })
 }
 
+const ActivityLog = (e) => {
+  e.preventDefault()
+  $("#offcanvas").offcanvas('show')
+  notif=null
+  $('#notif').text(notif)
+}
+
 $(document).ready(() => {
   getMyProfile()
   $('body').on('click', '#auth-logout', handleLogout)
+  $('body').on('click', '#offcanvas-toggle', ActivityLog)
 })
 </script>
 
-<nav id="navbar" class="navbar navbar-expand-lg align-middle">
+<nav id="navbar" class="navbar navbar-expand-lg align-middle fixed-top">
   <div class="container-fluid">
     <!--
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasLeft" aria-controls="offcanvasLeft">
@@ -57,7 +78,7 @@ $(document).ready(() => {
     </button>
     -->
 
-    <a class="navbar-brand start-0" href="/">Pixel Canvas</a>
+    <a id="navbar-brand" class="navbar-brand start-0" href="/">Pixel Canvas</a>
 
     <button id="navbar-toggler" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-links">
       <span id="navbar-toggler-icon" class="navbar-toggler-icon"></span>
