fixed close button

--- a/src/views/pixel/index.ejs
+++ b/src/views/pixel/index.ejs
@@ -374,6 +374,7 @@ $(document).ready(() => {
   getMyProfileIndex()
   $('#pages-Pixel-index').on('click', '.pixel-col', handlePixelClick)
   $('#pages-Pixel-index').on('click', '#modal-close', handleModalClick)
+  $('#pages-Pixel-index').on('click', '#modal-close-bottom', handleModalClick)
   $('#pages-Pixel-index').on('click', '#confirm', handleModalConfirm)
   $('#pages-Pixel-index').on('click', '#color-copy', copyColorClick)
   $('#pages-Pixel-index').on('mouseover', '.pixel-col', MouseHover)
