--- a/src/views/auth/signup.ejs
+++ b/src/views/auth/signup.ejs
@@ -9,7 +9,7 @@ const generateForm = ({ user, errors } = {}) => {
         <form id="signup-form">
 
           <div class="mb-3">
-            <label for="user-username" class="form-label">Username</label>
+            <label id="user-signup" for="user-username" class="form-label">Username</label>
             <input
               id="user-username"
               class="form-control ${errors?.username && 'is-invalid'}"
@@ -21,7 +21,7 @@ const generateForm = ({ user, errors } = {}) => {
           </div>
 
           <div class="mb-3">
-            <label for="user-email" class="form-label">Email</label>
+            <label id="user-signup" for="user-email" class="form-label">Email</label>
             <input
               id="user-email"
               class="form-control ${errors?.email && 'is-invalid'}"
@@ -33,7 +33,7 @@ const generateForm = ({ user, errors } = {}) => {
           </div>
 
           <div class="mb-3">
-            <label for="user-password" class="form-label">Password</label>
+            <label id="user-signup" for="user-password" class="form-label">Password</label>
             <input
               id="user-password"
               class="form-control ${errors?.password && 'is-invalid'}"
@@ -45,7 +45,7 @@ const generateForm = ({ user, errors } = {}) => {
           </div>
 
           <div class="mb-3">
-            <label for="user-password-confirmation" class="form-label">Password Confirmation</label>
+            <label id="user-signup" for="user-password-confirmation" class="form-label">Password Confirmation</label>
             <input
               id="user-password-confirmation"
               class="form-control ${errors?.passwordConfirmation && 'is-invalid'}"
@@ -56,7 +56,7 @@ const generateForm = ({ user, errors } = {}) => {
             <div class="invalid-feedback">${errors?.passwordConfirmation || ''}</div>
           </div>
 
-          <button class="btn btn-primary" type="submit">Submit</button>
+          <button  id="submit" class="btn btn-primary" type="submit">Submit</button>
         </form>
       </div>
     </div>
@@ -68,7 +68,7 @@ const generateForm = ({ user, errors } = {}) => {
 
 const generatePage = (info) => {
   const $page = $('#pages-auth-signup')
-  const $title = '<h1 class="text-center">Signup</h1>'
+  const $title = '<h1 id="user-signup-title" class="text-center">Signup</h1>'
   const $form = generateForm(info)
 
   $page.html('').append($title).append($form)
